--- a/index.html
+++ b/index.html
@@ -293,6 +293,7 @@
                         <del class="text-gray">Lunch provided daily</del>
                       </li>
                       <li>Interactive curriculum</li>
+                      <li>Advanced, in-person labs</li>
                     </ul>
                   </div>
                   <div class="price-btn">
@@ -332,6 +333,7 @@
                         <del class="text-gray">Lunch provided daily</del>
                       </li>
                       <li>Interactive curriculum</li>
+                      <li>Advanced, in-person labs</li>
                     </ul>
                   </div>
                   <div class="price-btn price-btn-bro">
@@ -371,6 +373,7 @@
                       </li>
                       <li>Lunch provided daily</li>
                       <li>Interactive curriculum</li>
+                      <li>Advanced, in-person labs</li>
                     </ul>
                   </div>
                   <div class="price-btn">
@@ -410,6 +413,7 @@
                       <li>Discount (eligible until May 10)</li>
                       <li>Lunch provided daily</li>
                       <li>Interactive curriculum</li>
+                      <li>Advanced, in-person labs</li>
                     </ul>
                   </div>
                   <div class="price-btn">
