--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
               </div> -->
               <!-- toggle-btn end -->
             </div>
-            <div class="col-md-12 col-sm-8 l-14-pricing-table row no-gutters">
+            <div class="col-md-12 col-sm-8 l-14-pricing-table justify-content-center row no-gutters">
               <div class="col-lg-3 col-md-6 border p-0">
                 <!-- single-price start -->
                 <div
@@ -280,17 +280,14 @@
                       <span class="d-inline-block mb-0 dynamic-value">$</span>
                       <h2 class="d-inline-block mb-0 dynamic-value" data-active="15" data-monthly="400" data-yearly="425"></h2>
                     </div>
-                    <span class="dynamic-value" data-active="per month" data-monthly="no lunch" data-yearly="with lunch"></span>
+                    <span class="dynamic-value" data-active="" data-monthly="" data-yearly=""></span>
                   </div>
                   <!-- main-price end -->
                   <!-- price-body start -->
                   <div class="price-body">
                     <ul class="pricing-list with-check-icon list-unstyled">
                       <li>
-                        <del class="text-gray">Discount</del>
-                      </li>
-                      <li>
-                        <del class="text-gray">Lunch provided daily</del>
+                        <del class="text-gray">Discount (eligible until May 10)</del>
                       </li>
                       <li>Interactive curriculum</li>
                       <li>Advanced, in-person labs</li>
@@ -322,16 +319,13 @@
                       <span class="d-inline-block mb-0 dynamic-value">$</span>
                       <h2 class="d-inline-block mb-0 dynamic-value" data-active="15" data-monthly="350" data-yearly="375"></h2>
                     </div>
-                    <span class="dynamic-value" data-active="per month" data-monthly="no lunch" data-yearly="with lunch"></span>
+                    <span class="dynamic-value" data-active="" data-monthly="" data-yearly=""></span>
                   </div>
                   <!-- main-price end -->
                   <!-- price-body start -->
                   <div class="price-body">
                     <ul class="pricing-list with-check-icon list-unstyled">
                       <li>Discount (eligible until May 10)</li>
-                      <li>
-                        <del class="text-gray">Lunch provided daily</del>
-                      </li>
                       <li>Interactive curriculum</li>
                       <li>Advanced, in-person labs</li>
                     </ul>
@@ -343,86 +337,7 @@
                 </div>
                 <!-- single-price end -->
               </div>
-              <div class="col-lg-3 col-md-6 border p-0">
-                <!-- single-price start -->
-                <div
-                  class="single-price bg-default text-center pt-5 pb-10 mb-lg-0"
-                  data-aos="fade-up"
-                  data-aos-duration="800"
-                  data-aos-once="true"
-                >
-                  <!-- price-top start -->
-                  <div class="price-top justify-content-between mb-2">
-                    <span>Regular</span>
-                  </div>
-                  <!-- price-top end -->
-                  <!-- main-price start -->
-                  <div class="main-price pb-8 border-bottom">
-                    <div class="price mt-3 mb-3 position-relative">
-                      <span class="d-inline-block mb-0 dynamic-value">$</span>
-                      <h2 class="d-inline-block mb-0 dynamic-value" data-active="15" data-monthly="425" data-yearly="499"></h2>
-                    </div>
-                    <span class="dynamic-value" data-active="per month" data-monthly="With Lunch" data-yearly="per year"></span>
-                  </div>
-                  <!-- main-price end -->
-                  <!-- price-body start -->
-                  <div class="price-body">
-                    <ul class="pricing-list with-check-icon list-unstyled">
-                      <li>
-                        <del class="text-gray">Discount</del>
-                      </li>
-                      <li>Lunch provided daily</li>
-                      <li>Interactive curriculum</li>
-                      <li>Advanced, in-person labs</li>
-                    </ul>
-                  </div>
-                  <div class="price-btn">
-                    <a class="btn" href="https://forms.gle/pbMH1X13CzDQu6dS6">Get started now</a>
-                  </div>
-                  <!-- price-btn end -->
-                </div>
-                <!-- single-price end -->
-              </div>
-              <div class="col-lg-3 col-md-6 border p-0">
-                <!-- single-price start -->
-                <div
-                  class="single-price bg-default text-center pt-5 pb-10"
-                  data-aos="fade-left"
-                  data-aos-duration="800"
-                  data-aos-once="true"
-                >
-                  <!-- price-top start -->
-                  <div class="price-top justify-content-between mb-2">
-                    <span class="font-size-1 letter-spacing-np51 text-dovegray line-height-1p66 font-weight-bold"
-                      >Early Bird</span
-                    >
-                  </div>
-                  <!-- price-top end -->
-                  <!-- main-price start -->
-                  <div class="main-price pb-8 border-bottom">
-                    <div class="price mt-3 mb-3 position-relative">
-                      <span class="d-inline-block mb-0 dynamic-value">$</span>
-                      <h2 class="d-inline-block mb-0 dynamic-value" data-active="15" data-monthly="375" data-yearly="999"></h2>
-                    </div>
-                    <span class="dynamic-value" data-active="per month" data-monthly="with lunch" data-yearly="per year"></span>
-                  </div>
-                  <!-- main-price end -->
-                  <!-- price-body start -->
-                  <div class="price-body">
-                    <ul class="pricing-list with-check-icon list-unstyled">
-                      <li>Discount (eligible until May 10)</li>
-                      <li>Lunch provided daily</li>
-                      <li>Interactive curriculum</li>
-                      <li>Advanced, in-person labs</li>
-                    </ul>
-                  </div>
-                  <div class="price-btn">
-                    <a class="btn" href="https://forms.gle/pbMH1X13CzDQu6dS6">Get started now</a>
-                  </div>
-                  <!-- price-btn end -->
-                </div>
-                <!-- single-price end -->
-              </div>
+              
             </div>
           </div>
         </div>
