fix: xl sizing on subpages

--- a/index.html
+++ b/index.html
@@ -46,6 +46,19 @@
     <!-- Plugin'stylesheets  -->
     <!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> -->
 
+    <style>
+      @media (min-width: 1400px) {
+        .container,
+        .container-sm,
+        .container-md,
+        .container-lg,
+        .container-xl,
+        .container-xxl {
+          max-width: 1320px;
+        }
+      }
+    </style>
+
     <link rel="stylesheet" href="/css/main.css" />
   </head>
 
@@ -324,7 +337,6 @@
                 </div>
                 <!-- single-price end -->
               </div>
-              
             </div>
           </div>
         </div>
