--- a/index.html
+++ b/index.html
@@ -239,8 +239,7 @@
               <div class="section-heading-8">
                 <h2>Pricing</h2>
                 <p>
-                  A $50 advance deposit is required to reserve your seat. We will contact you with full payment information before
-                  the camp begins.
+                  The price for all attendees is $350 now, no matter when you sign up. Sign ups for a particular session are open until the first day of the camp.
                 </p>
               </div>
             </div>
