--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:title" content="CCA iGEM Summer Camp | Join Today!" />
     <meta
       property="og:description"
-      content="Learn biology, synthetic biology, chemistry, and forensics at a high school level, now in-person for summer 2022!"
+      content="Learn biology, synthetic biology, chemistry, and forensics at a high school level, now in-person for summer 2022! Taught by iGEM members from an award winning team."
     />
     <meta property="og:image" content="https://i.imgur.com/rpTzzTe.png" />
 
