--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="title" content="CCA iGEM Summer Camp | Join Today!" />
     <meta
       name="description"
-      content="Learn biology, synthetic biology, chemistry, and forensics at a high school level, now in-person for summer 2022! Email ccaigem2022@gmail.com with any questions."
+      content="Learn biology, synthetic biology, chemistry, and forensics at a high school level, now in-person for summer 2023! Email ccaigem2023@gmail.com with any questions."
     />
 
     <!-- Open Graph / Facebook -->
@@ -121,7 +121,7 @@
               </nav>
             </div>
             <div class="header-btn header-btn-l-14 ms-auto d-none d-xs-inline-flex">
-              <a target="_blank" class="btn btn trail-btn focus-reset" href="https://fs30.formsite.com/ccaf/igem2022/index.html">Get Started</a>
+              <a target="_blank" class="btn btn trail-btn focus-reset" href="https://fs30.formsite.com/ccaf/igem23/index">Get Started</a>
             </div>
             <!-- mobile menu trigger -->
             <div class="mobile-menu-trigger">
@@ -177,7 +177,7 @@
                   Learn about innovative STEM topics in a fun, engaging classroom environment. We offer many opportunities for
                   students to discuss and implement new ideas in various scientific fields.
                 </p>
-                <a href="https://fs30.formsite.com/ccaf/igem2022/index.html" class="btn focus-reset">
+                <a href="https://fs30.formsite.com/ccaf/igem23/index" class="btn focus-reset">
                   Get Started Now
                   <i class="fas fa-angle-right"></i>
                 </a>
@@ -217,7 +217,7 @@
                   Advanced, in-person biology and chemistry labs inspired by high school classes. Learn valuable skills for
                   internships, research, and future STEM classes.
                 </p>
-                <a href="https://fs30.formsite.com/ccaf/igem2022/index.html" class="btn focus-reset">
+                <a href="https://fs30.formsite.com/ccaf/igem23/index" class="btn focus-reset">
                   Get Started Now
                   <i class="fas fa-angle-right"></i>
                 </a>
@@ -239,7 +239,7 @@
               <div class="section-heading-8">
                 <h2>Pricing</h2>
                 <p>
-                  The price for all attendees is $350 now, no matter when you sign up. Sign ups for a particular session are open until the first day of the camp.
+                  The price for early bird registration is $350 until May 10th-it will become $400 after then. Sign ups for a particular session are open until the first day of the camp.
                 </p>
               </div>
             </div>
@@ -293,7 +293,7 @@
                     </ul>
                   </div>
                   <div class="price-btn">
-                    <a class="btn focus-reset" href="https://fs30.formsite.com/ccaf/igem2022/index.html">Get started now</a>
+                    <a class="btn focus-reset" href="https://fs30.formsite.com/ccaf/igem23/index">Get started now</a>
                   </div>
                   <!-- price-btn end -->
                 </div>
@@ -330,7 +330,7 @@
                     </ul>
                   </div>
                   <div class="price-btn price-btn-bro">
-                    <a class="btn" href="https://fs30.formsite.com/ccaf/igem2022/index.html">Get started now</a>
+                    <a class="btn" href="https://fs30.formsite.com/ccaf/igem23/index">Get started now</a>
                   </div>
                   <!-- price-btn end -->
                 </div>
@@ -351,7 +351,7 @@
               </div>
             </div>
             <div class="col-lg-3 text-lg-end text-center">
-              <a class="btn" href="https://fs30.formsite.com/ccaf/igem2022/index.html">Sign Up Now</a>
+              <a class="btn" href="https://fs30.formsite.com/ccaf/igem23/index">Sign Up Now</a>
             </div>
           </div>
         </div>
@@ -375,7 +375,7 @@
                 <div class="col-sm-4 col-xs-6">
                   <div class="footer-widget widget3">
                     <ul class="widget-links pl-0 list-unstyled">
-                      <li><a href="mailto:ccaigem2022@gmail.com">Contact </a></li>
+                      <li><a href="mailto:ccaigem2023@gmail.com">Contact </a></li>
                       <li><a href="">Privacy Policy</a></li>
                       <li><a href="">Terms & Conditions</a></li>
                     </ul>
@@ -390,7 +390,7 @@
                         <a href="https://instagram.com/cca.igem" style="padding-right: 3px" target="_blank">
                           <i class="fa-brands fa-instagram"></i
                         ></a>
-                        <a href="mailto:ccaigem2022@gmail.com" target="_blank"> <i class="fa-regular fa-envelope"></i> </a>
+                        <a href="mailto:ccaigem2023@gmail.com" target="_blank"> <i class="fa-regular fa-envelope"></i> </a>
                       </li>
                     </ul>
                   </div>
