--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:title" content="CCA iGEM Summer Camp | Join Today!" />
     <meta
       property="og:description"
-      content="Learn biology, synthetic biology, chemistry, and forensics at a high school level, now in-person for summer 2022! Taught by iGEM members from an award winning team."
+      content="Learn biology, synthetic biology, chemistry, and forensics at a high school level, now in-person for summer 2023! Taught by iGEM members from an award winning team."
     />
     <meta property="og:image" content="https://i.imgur.com/rpTzzTe.png" />
 
@@ -29,7 +29,7 @@
     <meta property="twitter:title" content="CCA iGEM Summer Camp | Join Today!" />
     <meta
       property="twitter:description"
-      content="Learn biology, synthetic biology, chemistry, and forensics at a high school level, now in-person for summer 2022!"
+      content="Learn biology, synthetic biology, chemistry, and forensics at a high school level, now in-person for summer 2023!"
     />
     <meta property="twitter:image" content="https://i.imgur.com/rpTzzTe.png" />
 
@@ -146,9 +146,9 @@
                 <h1>CCA iGEM Science Camp</h1>
                 <p>
                   Learn biology, synthetic biology, chemistry, and forensics at a high school level, now in-person for summer
-                  2022!
+                  2023!
                 </p>
-                <a href="https://fs30.formsite.com/ccaf/igem2022/index.html" class="btn focus-reset">Register Now</a>
+                <a href="https://fs30.formsite.com/ccaf/igem23/index" class="btn focus-reset">Register Now</a>
               </div>
             </div>
             <div class="col-xl-7 col-lg-5 col-md-8" data-aos="fade-left" data-aos-duration="800" data-aos-once="true">
@@ -385,7 +385,7 @@
                   <div class="footer-widget widget4">
                     <p class="widget-title">General</p>
                     <ul class="widget-links pl-0 list-unstyled">
-                      <li><a>&copy; CCA iGEM 2022.</a></li>
+                      <li><a>&copy; CCA iGEM 2023.</a></li>
                       <li>
                         <a href="https://instagram.com/cca.igem" style="padding-right: 3px" target="_blank">
                           <i class="fa-brands fa-instagram"></i
