--- a/index.html
+++ b/index.html
@@ -109,13 +109,16 @@
                     </ul>
                   </li> -->
                   <li class="nav-item">
-                    <a href="/camp-info" class="nav-link-item">Camp Information</a>
+                    <a href="/camp-information" class="nav-link-item">Camp Information</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="/hackathon" class="nav-link-item">Hackathon</a>
                   </li>
                   <li class="nav-item">
                     <a href="/about" class="nav-link-item">About Us</a>
                   </li>
                   <li class="nav-item">
-                    <a href="https://gofund.me/8b23fc16" class="nav-link-item">Support</a>
+                    <a href="https://gofund.me/8b23fc16" class="nav-link-item">Donate</a>
                   </li>
                 </ul>
               </nav>
@@ -366,9 +369,9 @@
                   <div class="footer-widget widget2">
                     <p>Help menu</p>
                     <ul class="widget-links pl-0 list-unstyled">
-                      <li><a href="/camp-info">Camp Info</a></li>
+                      <li><a href="/camp-information">Camp Info</a></li>
                       <li><a href="/about">About Us</a></li>
-                      <li><a href="https://gofund.me/8b23fc16">Support</a></li>
+                      <li><a href="https://gofund.me/8b23fc16">Donate</a></li>
                     </ul>
                   </div>
                 </div>
